<resources>
    <string name="app_name">Calculadora</string>
    <string name="calcula">Calculadora</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btn0">0</string>
    <string name="btncoma">.</string>
    <string name="btnigual">=</string>
    <string name="btnborrartodo">CE</string>
    <string name="btnborraruno">C</string>
    <string name="btnSuma">+</string>
    <string name="btnResta">-</string>
    <string name="btnMultiplica">*</string>
    <string name="btnDivide">/</string>
    <string name="calculadora">cal</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="acerca_de">About</string>
    <string name="title_activity_acerca_de">Acerca De</string>
</resources>
