<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.calcular.calculadora.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="@android:color/white">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/gridLayout"
        android:layout_below="@+id/gridLayout3"
        android:layout_alignParentStart="true">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="74dp"
            android:layout_height="70dp"
            android:text="@string/btn7"
            android:id="@+id/btn7"
            android:layout_row="1"
            android:layout_column="0"
            android:textSize="20dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="74dp"
            android:layout_height="70dp"
            android:text="@string/btn8"
            android:id="@+id/btn8"
            android:layout_row="1"
            android:layout_column="1"
            android:textSize="20dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="74dp"
            android:layout_height="70dp"
            android:text="@string/btn9"
            android:id="@+id/btn9"
            android:layout_row="1"
            android:layout_column="2"
            android:textSize="20dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="74dp"
            android:layout_height="70dp"
            android:text="@string/btn4"
            android:id="@+id/btn4"
            android:layout_row="2"
            android:layout_column="0"
            android:textSize="20dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="74dp"
            android:layout_height="70dp"
            android:text="@string/btn5"
            android:id="@+id/btn5"
            android:layout_row="2"
            android:layout_column="1"
            android:textSize="20dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="74dp"
            android:layout_height="70dp"
            android:text="@string/btn6"
            android:id="@+id/btn6"
            android:layout_row="2"
            android:layout_column="2"
            android:textSize="20dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="74dp"
            android:layout_height="70dp"
            android:text="@string/btn1"
            android:id="@+id/btn1"
            android:layout_row="3"
            android:layout_column="0"
            android:textSize="20dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="74dp"
            android:layout_height="70dp"
            android:text="@string/btn2"
            android:id="@+id/btn2"
            android:layout_row="3"
            android:layout_column="1"
            android:textSize="20dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="74dp"
            android:layout_height="70dp"
            android:text="@string/btn3"
            android:id="@+id/btn3"
            android:layout_row="3"
            android:layout_column="2"
            android:textSize="20dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="74dp"
            android:layout_height="70dp"
            android:text="@string/btncoma"
            android:id="@+id/btncoma"
            android:layout_row="4"
            android:layout_column="0"
            android:textSize="20dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="74dp"
            android:layout_height="70dp"
            android:text="@string/btn0"
            android:id="@+id/btn0"
            android:layout_row="4"
            android:layout_column="1"
            android:textSize="20dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="74dp"
            android:layout_height="70dp"
            android:text="@string/btnigual"
            android:id="@+id/btnigual"
            android:layout_row="4"
            android:layout_column="2"
            android:textColor="@color/accent_material_light"
            android:textSize="20dp" />

    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/gridLayout"
        android:layout_alignTop="@+id/gridLayout"
        android:id="@+id/gridLayout2">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/btnSuma"
            android:id="@+id/btnSuma"
            android:layout_row="2"
            android:layout_column="0"
            android:textColor="@color/accent_material_light"
            android:textSize="20dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/btnResta"
            android:id="@+id/btnResta"
            android:layout_row="3"
            android:layout_column="0"
            android:textColor="@color/accent_material_light"
            android:textSize="20dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/btnMultiplica"
            android:id="@+id/btnMultiplica"
            android:layout_row="4"
            android:layout_column="0"
            android:textColor="@color/accent_material_light"
            android:textSize="20dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/btnDivide"
            android:id="@+id/btnDivide"
            android:layout_row="5"
            android:layout_column="0"
            android:textColor="@color/accent_material_light"
            android:textSize="20dp" />

    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="158dp"
        android:id="@+id/gridLayout4">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/pantallaOperacion"
            android:textColor="@color/primary_dark_material_dark"
            android:layout_alignParentEnd="true"
            android:textAlignment="textStart"
            android:background="@color/material_grey_300"
            android:layout_alignParentStart="true"
            android:layout_above="@+id/pantallaRespT" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/pantallaRespT"
            android:textColor="@color/primary_text_default_material_light"
            android:textAlignment="textEnd"
            android:layout_above="@+id/gridLayout"
            android:layout_alignEnd="@+id/gridLayout2"
            android:background="@color/material_grey_300"
            android:layout_row="1"
            android:layout_column="0" />
    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/gridLayout4"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/gridLayout2"
        android:id="@+id/gridLayout3">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:text="@string/btnborrartodo"
            android:id="@+id/btnBorraTodo"
            android:layout_row="0"
            android:layout_column="0"
            android:textColor="@color/accent_material_light"
            android:textSize="20dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/btnborraruno"
            android:id="@+id/btnborrauno"
            android:layout_row="0"
            android:layout_column="1"
            android:textColor="@color/accent_material_light"
            android:textSize="20dp" />
    </GridLayout>

</RelativeLayout>
